Polished some files
